Bump NuoDB JDBC Driver version to 23.0.0
Updated README with new versions
Updated hibernate-core tests to v5.6.5